added avro serializer

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+== 1.0.2 / 09-04-15
+* added avro serializer
 == 1.0.1 / 08-17-15
 * added round-robin and specific partition sends
 == 1.0.0 / 08-10-15
