--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+== 2.0.0 / 09-29-15
+* pass broker url vs host/port to allow for multiple hosts and compatibility with other kafka stuff.  This breaks the new method from the old way.
 == 1.0.4 / 09-28-15
 * changed get_partition_ids to get only partitions with a leader
 == 1.0.3 / 09-15-15
